[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snk"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Wytamma Wirth", email = "wytamma.wirth@me.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer[all]<=0.9.0",
  "GitPython<=3.1.31",
  "snakemake<8",
  "pulp<2.8",  # Pin pulp <2.8 for snakemake: https://github.com/snakemake/snakemake/issues/2607
  "art<=5.9",
  "makefun<=1.15.1",
  "snk-cli==0.1.0"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wytamma/snk#readme"
Issues = "https://github.com/wytamma/snk/issues"
Source = "https://github.com/wytamma/snk"

[project.scripts]
snk = "snk.main:app"

[tool.hatch.version]
path = "snk/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "pytest",
  "pytest-cov",
  "write-the",
  "openai"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=snk --cov=tests"
test = "cov --no-cov"
release = "gh release create v$(hatch version)"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

# requires hatch-containers
# [tool.hatch.envs.docker]
# type = "container"
# image = "wytamma/snk"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "snk/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
